--- a/network/ssh.html
+++ b/network/ssh.html
@@ -140,7 +140,7 @@
                 <h2>Comandos adicionales</h2>
                 <div class="contenedor">
                     <div class="etiqueta">
-                        Realiza un reenvío de puerto (port forwarding), el cual abre un puerto interno del servidor que no es accesible desde Internet en la red local de nuestra computadora, desde la cual nos conectamos mediante la dirección de localhost (127.0.0.1). Este puerto podría estar siendo utilizado para un sitio web, una base de datos u otro servicio. En caso de ser un sitio web, se podría acceder ingresando '127.0.0.1:8000' en nuestro navegador.
+                        Realiza un reenvío de puerto (port forwarding), el cual abre un puerto interno del servidor que no es accesible desde Internet, en la red local de nuestra computadora, desde la cual nos conectamos mediante la dirección de localhost (127.0.0.1). Este puerto podría estar siendo utilizado para un sitio web, una base de datos u otro servicio. En caso de ser un sitio web, se podría acceder ingresando '127.0.0.1:8000' en nuestro navegador.
                     </div>
                     <div class="comandos">
                       <input type="text" class="text" value="ssh -i key -L 8000:127.0.0.1:8000 usuario@192.168.0.5" oninput="ajustarAncho(this)">
